[gd_scene load_steps=27 format=3 uid="uid://c5pon6ytetm0q"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player_form_2.gd" id="1_i8duy"]
[ext_resource type="Resource" path="res://Data/Movement Data/Form_2.tres" id="2_0rlqi"]
[ext_resource type="Resource" path="res://Data/Stats/Form_2_Stats.tres" id="3_1a5h7"]
[ext_resource type="Resource" uid="uid://dgvi5sx4i7sao" path="res://Data/Fillament Data/Form_02_Fillament_Data.tres" id="3_gqp4l"]
[ext_resource type="PackedScene" uid="uid://bfmjbl00kj2vc" path="res://Scenes/Components/hurtbox.tscn" id="6_tvf5k"]
[ext_resource type="PackedScene" uid="uid://bnue5rfo1toh8" path="res://Scenes/Components/hand.tscn" id="7_x2h50"]
[ext_resource type="AudioStream" uid="uid://bfcmace7xd7vo" path="res://Audio/Sounds/sx_int_pistol_fire_1.ogg" id="8_u1n34"]
[ext_resource type="AudioStream" uid="uid://onsj4rkpdeij" path="res://Audio/Sounds/sx_int_pistol_fire_2.ogg" id="9_pbmrk"]
[ext_resource type="AudioStream" uid="uid://dydgebr0fsmk0" path="res://Audio/Sounds/sx_int_pistol_fire_3.ogg" id="10_06of1"]
[ext_resource type="AudioStream" uid="uid://bpw43r1gtpgdc" path="res://Audio/Sounds/sx_int_pistol_fire_secondary_1.ogg" id="11_276sh"]
[ext_resource type="AudioStream" uid="uid://ltkpo53rw04b" path="res://Audio/Sounds/sx_int_pistol_fire_secondary_2.ogg" id="12_uje7s"]
[ext_resource type="AudioStream" uid="uid://dwnvxopsw5ybg" path="res://Audio/Sounds/sx_int_pistol_fire_secondary_3.ogg" id="13_d4v30"]
[ext_resource type="Texture2D" uid="uid://dqoay7ltrsfvt" path="res://Textures/Characters/KPG-Droid.png" id="15_0hwqo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k161k"]
radius = 3.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpe5m"]
size = Vector2(6, 24)

[sub_resource type="Animation" id="Animation_mlu16"]
length = 1.1

[sub_resource type="Animation" id="Animation_creca"]
resource_name = "Shoot"
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_orwht"]
resource_name = "Shoot_shell"
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_shell"
}]
}

[sub_resource type="Animation" id="Animation_8vmw1"]
resource_name = "normal"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x67tq"]
_data = {
"RESET": SubResource("Animation_mlu16"),
"Shoot": SubResource("Animation_creca"),
"Shoot_shell": SubResource("Animation_orwht"),
"normal": SubResource("Animation_8vmw1")
}

[sub_resource type="Animation" id="Animation_q36re"]
resource_name = "Hit"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_otwvt"]
resource_name = "Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ubivd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hl060"]
_data = {
"Hit": SubResource("Animation_q36re"),
"Normal": SubResource("Animation_otwvt"),
"RESET": SubResource("Animation_ubivd")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yamvr"]
playback_mode = 1
random_pitch = 1.25
random_volume_offset_db = 0.4
streams_count = 3
stream_0/stream = ExtResource("8_u1n34")
stream_1/stream = ExtResource("9_pbmrk")
stream_2/stream = ExtResource("10_06of1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0oacy"]
playback_mode = 1
random_pitch = 1.25
random_volume_offset_db = 0.4
streams_count = 3
stream_0/stream = ExtResource("11_276sh")
stream_1/stream = ExtResource("12_uje7s")
stream_2/stream = ExtResource("13_d4v30")

[node name="Form-02" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_i8duy")
movement_data = ExtResource("2_0rlqi")
fillament_data = ExtResource("3_gqp4l")
stats = ExtResource("3_1a5h7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_k161k")

[node name="Hurtbox" parent="." instance=ExtResource("6_tvf5k")]
monitoring = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_gpe5m")

[node name="ShootingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x67tq")
}
autoplay = "normal"

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hl060")
}
autoplay = "Normal"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_yamvr")
volume_db = 2.0

[node name="AudioStreamSecondary" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_0oacy")
volume_db = 2.0
pitch_scale = 1.59

[node name="Hand" parent="." instance=ExtResource("7_x2h50")]
z_index = 1
position = Vector2(0, -16)
current_type = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.25, 0.25)
texture = ExtResource("15_0hwqo")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
